[#3749] issues with container width and old setup menu overlap

--- a/akvo/rsr/front-end/styles-src/main.scss
+++ b/akvo/rsr/front-end/styles-src/main.scss
@@ -3906,6 +3906,7 @@ main.results-page {
             margin-top: 0px;
             margin-bottom: 10px;
             padding: 10px 0;
+            max-width: 50%;
             a.liveView {
                 margin-left: 50px;
             }
