--- a/akvo/rsr/spa/app/modules/editor/section5/styles.scss
+++ b/akvo/rsr/spa/app/modules/editor/section5/styles.scss
@@ -94,7 +94,7 @@
   }
   
   .results-list{
-    margin-right: 160px;
+    margin-right: 200px;
     .ant-collapse-header{
       // padding-top: 18px;
       // padding-bottom: 18px;
